# cpp-api-samples

./: README.md  cpp_samples_lin_community_double.project  cpp_samples_lin_community_float.project  cpp_samples_lin_eng_sim_double.project  cpp_samples_lin_eng_sim_float.project  cpp_samples_win_community_double.project  cpp_samples_win_community_float.project  cpp_samples_win_eng_sim_double.project  cpp_samples_win_eng_sim_float.project  download_samples_content.py
source/: AppEditorLogic.cpp  AppEditorLogic.h  AppSystemLogic.cpp  AppSystemLogic.h  AppWorldLogic.cpp  AppWorldLogic.h  CMakeLists.txt  Makefile  cpp_samples.sln  cpp_samples.vcxproj  cpp_samples.vcxproj.filters  main.cpp  unigine_stl.natvis
source/animation/animation_material/: MaterialAnimationSample.cpp  animation_material.sample
source/animation/animation_node/: NodeAnimationSample.cpp  animation_node.sample
source/animation/animation_property/: PropertyAnimationSample.cpp  animation_property.sample
source/animation/animation_singleton/: SingletonAnimationSample.cpp  animation_singleton.sample
source/animation/animation_widget/: WidgetAnimationSample.cpp  animation_widget.sample
source/animation/bones_constraints/: AnimationBonesConstraintsSample.cpp  AnimationBonesConstraintsSample.h  bones_constraints.sample
source/animation/bones_ik/: AnimationBonesIKSample.cpp  AnimationBonesIKSample.h  bones_ik.sample
source/animation/bones_look_at/: AnimationBonesLookAtSample.cpp  AnimationBonesLookAtSample.h  bones_look_at.sample
source/animation/bones_masks/: AnimationBonesMasksSample.cpp  AnimationBonesMasksSample.h  bones_masks.sample
source/animation/bones_retargeting/: AnimationBonesRetargetingSample.cpp  AnimationBonesRetargetingSample.h  bones_retargeting.sample
source/animation/bones_root_motion/: AnimationBonesRootMotion.cpp  AnimationBonesRootMotion.h  bones_root_motion.sample
source/animation/bones_sandbox/: AnimationBonesSandboxSample.cpp  AnimationBonesSandboxSample.h  BonesSandbox.cpp  BonesSandbox.h  bones_sandbox.sample
source/animation/bones_simple_foot_placement/: AnimationBonesSimpleFootPlacementSample.cpp  AnimationBonesSimpleFootPlacementSample.h  bones_simple_foot_placement.sample
source/animation/bones_state_machine/: AnimationBonesStateMachineSample.cpp  AnimationBonesStateMachineSample.h  StateMachine.cpp  StateMachine.h  bones_state_machine.sample
source/animation/curve_animation/: CurveAnimationTransform.cpp  CurveAnimationTransform.h  curve_animation.sample
source/animation/physics_based_animation/: CatDemo.cpp  CatDemo.h  CatGame.cpp  CatGame.h  CatSample.cpp  CatSample.h  EaseInMotion.cpp  EaseInMotion.h  EaseOutBounceMotion.cpp  EaseOutBounceMotion.h  EaseOutMotion.cpp  EaseOutMotion.h  Laser.cpp  Laser.h  LinearMotion.cpp  LinearMotion.h  MotionMode.cpp  MotionMode.h  Persecutor.cpp  Persecutor.h  SpringEasy.cpp  SpringEasy.h  SpringMotion.cpp  SpringMotion.h  SpringRegular.cpp  SpringRegular.h  physics_based_animation.sample
source/animation/playback_layers/: PlaybackLayersSample.cpp  playback_layers.sample
source/animation/track_playback/: TrackPlayback.cpp  TrackPlayback.h  Tracker.cpp  Tracker.h  track_playback.sample
source/basics/bound_intersection/: BoundIntersection.cpp  BoundIntersection.h  bound_intersection.sample
source/basics/camera_zoom/: TargetGui.cpp  TargetGui.h  ZoomController.cpp  ZoomController.h  ZoomSample.cpp  ZoomSample.h
source/basics/component_system/: ComponentSystemSample.cpp  ComponentSystemSample.h  Pawn.cpp  Pawn.h  Projectile.cpp  Projectile.h  Spinner.cpp  Spinner.h  component_system.sample
source/menu_ui/: DescriptionWindowCreator.cpp  DescriptionWindowCreator.h  MainMenu.cpp  MainMenu.h  SampleDescriptionWindow.cpp  SampleDescriptionWindow.h  WorldMenu.cpp  WorldMenu.h
source/utils/: AsyncTasks.cpp  AsyncTasks.h  BodyFractureUnit.cpp  BodyFractureUnit.h  Crosshair.cpp  Crosshair.h  DefaultPlayer.cpp  DefaultPlayer.h  EventTask.h  InputManager.cpp  InputManager.h  Math.cpp  Math.h  MutableLambda.h  PersecutorTarget.cpp  PersecutorTarget.h  Rotator.cpp  Rotator.h  ScreenshotMaker.cpp  ScreenshotMaker.h  SimpleInformationBox.cpp  SimpleInformationBox.h  SimplePathControl.cpp  SimplePathControl.h  Spawner.cpp  Spawner.h  Spline.cpp  Spline.h  UnigineScriptsInterpreter.cpp  UnigineScriptsInterpreter.h  Utils.h
(+1093 files in other folders)
